--- a/application.css
+++ b/application.css
@@ -7,17 +7,13 @@ section {
 	display: flex;
 	flex-wrap: nowrap;
 	flex-direction: row;
-	
+
 }
 
 .letters {
-	font-size: 40vmin;
-	text-align: center;
-	color: #424242;
-	font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
-	background: black;
-	height: 100%;
-	width: 100%;
+
+	/*height: 100%;
+	width: 100%;*/
 }
 
 /* entire container, keeps perspective */
@@ -25,9 +21,9 @@ section {
 	perspective: 1000px;
 }
 /* flip the pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
+/*.flip-container:hover .flipper, .flip-container.hover .flipper {
 	transform: rotateY(180deg);
-}
+}*/
 
 .flip-container, .front, .back {
 	width: 320px;
@@ -38,8 +34,13 @@ section {
 .flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-
+	transform-origin: right center;
 	position: relative;
+	font-size: 40vmin;
+	text-align: center;
+	color: #424242;
+	font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
+	background: black;
 }
 
 /* hide back of pane during swap */
@@ -67,7 +68,11 @@ section {
 	transform: rotateY(180deg);
 }
 
-
-.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
-	transform: rotateY(180deg);
+.flipped {
+  /*transform: rotateY( 180deg );*/
+	transform: translateX( -100% ) rotateY( -180deg );
 }
+
+/*.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+	transform: rotateY(180deg);
+}*/
