--- a/application.css
+++ b/application.css
@@ -1,6 +1,8 @@
 body {
-	background-image: linear-gradient(-90deg, #000000, #FFFFFF);
+	/*background-image: linear-gradient(-90deg, #000000, #FFFFFF);*/
+	/*background: linear-gradient(to right, rgba(255,0,0,0), rgba(255, 255, 255, 0.7));*/
 	font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
+	background: #1c1c1c;
 }
 
 section {
@@ -10,10 +12,33 @@ section {
 
 }
 
-.letters {
+main {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: center;
+}
 
+
+.rainbow {
+
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+.letters {
+	/*-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;*/
+  /*background: -webkit-linear-gradient(#eee, #333);*/
 	/*height: 100%;
 	width: 100%;*/
+	/*color: transparent;*/
+	/*opacity: 50%;*/
+	/*text-shadow: 2px 2px #ffffff;*/
 }
 
 /* entire container, keeps perspective */
@@ -38,9 +63,11 @@ section {
 	position: relative;
 	font-size: 40vmin;
 	text-align: center;
-	color: #424242;
+	color: #bdbdbd;
+	/*color: #424242;*/
 	font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
-	background: black;
+	/*background: black;*/
+
 }
 
 /* hide back of pane during swap */
@@ -76,3 +103,93 @@ section {
 /*.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
 	transform: rotateY(180deg);
 }*/
+
+
+.shimmer{
+    /* styling stuff */
+    font-family:"Alegreya Sans";
+    font-weight:300;
+    font-size:3em;
+    margin:0 auto;
+    padding: 0 40px;
+    text-align: center;
+    color: rgba(255,255,255,0.1);
+}
+
+.shimmer {
+    /* the shimmer magic */
+    background: -webkit-gradient(linear,left top,right top,from(#222),to(#222),color-stop(.5,#fff));
+    background: -moz-gradient(linear,left top,right top,from(#222),to(#222),color-stop(.5,#fff));
+    background: gradient(linear,left top,right top,from(#222),to(#222),color-stop(.5,#fff));
+    -webkit-background-size: 125px 100%;
+    -moz-background-size: 125px 100%;
+    background-size: 125px 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-animation-name: shimmer;
+    -moz-animation-name: shimmer;
+    -webkit-animation-name: shimmer;
+    animation-name: shimmer;
+    -webkit-animation-duration: 2s;
+    -moz-animation-duration: 2s;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-color: #222;
+  }
+
+  @-moz-keyframes shimmer {
+    0% {
+      background-position: top left;
+    }
+
+    100% {
+      background-position: top right;
+    }
+  }
+
+  @-webkit-keyframes shimmer {
+    0% {
+      background-position: top left;
+    }
+
+    100% {
+      background-position: top right;
+    }
+  }
+
+  @-o-keyframes shimmer {
+    0% {
+      background-position: top left;
+    }
+
+    100% {
+      background-position: top right;
+    }
+  }
+
+  @-ms-keyframes shimmer {
+    0% {
+      background-position: top left;
+    }
+
+    100% {
+      background-position: top right;
+    }
+  }
+
+  @keyframes shimmer {
+    0% {
+      background-position: top left;
+    }
+
+    100% {
+      background-position: top right;
+    }
+  }
