--- a/application.css
+++ b/application.css
@@ -18,9 +18,15 @@ main {
 	flex-direction: column;
 	flex-wrap: nowrap;
 	align-items: center;
-	justify-content: center;*/
+	justify-content: center;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;*/
 }
 
+.guessed {
+	background: blue;
+}
 
 .rainbow {
 
