--- a/application.css
+++ b/application.css
@@ -41,6 +41,25 @@ h2 {
 
 }
 
+a:link {
+	color: inherit;
+}
+
+footer {
+	background: #FFD700;
+	color: #272100;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-decoration: none;
+	height: 25px;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+
+}
+
 .guess {
 	margin-top: 5%;
 }
