--- a/application.css
+++ b/application.css
@@ -41,12 +41,19 @@ h2 {
 
 }
 
-a:link {
+a {
+	text-decoration: none;
 	color: inherit;
+	display: flex;
+}
+
+a:link, a:visited, a:hover {
+	color: inherit;
+	display: flex;
 }
 
 footer {
-	background: #FFD700;
+	background: #c4c7ce
 	color: #272100;
 	position: fixed;
 	left: 0;
@@ -55,8 +62,9 @@ footer {
 	text-decoration: none;
 	height: 25px;
 	display: flex;
-	align-content: center;
-	justify-content: center;
+	align-items: center;
+	justify-content: space-around;
+
 
 }
 
