--- a/application.css
+++ b/application.css
@@ -1,3 +1,97 @@
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
+
+body {
+    line-height:1;
+}
+
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section {
+    display:block;
+}
+
+nav ul {
+    list-style:none;
+}
+
+blockquote, q {
+    quotes:none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content:'';
+    content:none;
+}
+
+a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
+
+
+ins {
+    background-color:#ff9;
+    color:#000;
+    text-decoration:none;
+}
+
+mark {
+    background-color:#ff9;
+    color:#000;
+    font-style:italic;
+    font-weight:bold;
+}
+
+del {
+    text-decoration: line-through;
+}
+
+abbr[title], dfn[title] {
+    border-bottom:1px dotted;
+    cursor:help;
+}
+
+table {
+    border-collapse:collapse;
+    border-spacing:0;
+}
+
+hr {
+    display:block;
+    height:1px;
+    border:0;
+    border-top:1px solid #cccccc;
+    margin:1em 0;
+    padding:0;
+}
+
+input, select {
+    vertical-align:middle;
+}
+
+
 body {
 	/*background-image: linear-gradient(-90deg, #000000, #FFFFFF);*/
 	/*background: linear-gradient(to right, rgba(255,0,0,0), rgba(255, 255, 255, 0.7));*/
@@ -74,7 +168,11 @@ footer {
 }
 
 .guessed {
-	background: blue;
+	background: #2a2a2a;
+	color: #aaa;
+	position: relative;
+	top: 0.2em;
+	box-shadow: 0 0 0 0.05em black;
 
 }
 
@@ -176,4 +274,98 @@ footer {
 .demo {
 	text-align: center;
 	height: 12vmin;
+	padding: 5px;
+	margin: 5px;
+}
+
+.score {
+	margin: 5px;
+	padding: 5px;
+}
+
+.reset-button {
+	color: #333;
+	text-align: center;
+	background: #eee;
+	border-radius: 0.3em;
+	margin: 0.3em;
+	padding: 0.3em;
+	font-size: 1em;
+	width: 3.3em;
+	box-sizing: border-box;
+	cursor: pointer;
+	-webkit-user-select: none;
+	border: 1px solid #444;
+	box-shadow: 0 0.2em 0 0.05em #222;
+	border-bottom-color: #555;
+	width: auto;
+
+}
+
+.button-flex {
+	text-align: center;
+	margin: 5px;
+}
+
+.button-section {
+	background: #eee;
+	border-radius: 5px;
+	padding: 5px;
+	width: 75%;
+	min-height: 7%;
+	padding-bottom: 10px;
+	margin: 10px;
+}
+
+.button-section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.flex-section {
+	display: flex;
+	text-align: center;
+	align-items: center;
+	align-self: center;
+	justify-content: center;
+	flex-direction: column;
+	flex-wrap: nowrap;
+
+}
+
+
+.keyboard__row {
+    display: inline-block;
+		text-align: center;
+    height: 3em;
+    margin: 0.2em;
+}
+
+.keyboard__row > * {
+    /*position: relative;*/
+    background: #333;
+    text-align: center;
+    color: #eee;
+    /*float: left;*/
+    border-radius: 0.3em;
+    margin: 0.2em;
+    padding: 0.2em;
+    width: 3.3em;
+    height: 100%;
+    box-sizing: border-box;
+    cursor: pointer;
+    -webkit-user-select: none;
+    border: 1px solid #444;
+    box-shadow: 0 0.2em 0 0.05em #222;
+    border-bottom-color: #555;
+
+}
+
+.key__letter:active {
+    background: #2a2a2a;
+    color: #aaa;
+    position: relative;
+    top: 0.2em;
+    box-shadow: 0 0 0 0.05em black;
 }
