--- a/application.css
+++ b/application.css
@@ -119,7 +119,7 @@ main {
 }
 
 h1 {
-	font-size: 6vmin;
+	font-size: 6vh;
   text-align: center;
   border-bottom: 1px solid whitesmoke;
   /* width: 20%; */
@@ -127,8 +127,8 @@ h1 {
   /* align-items: center; */
   display: flex;
   justify-content: center;
-  padding-bottom: 3vmin;
-  margin-top: -1vmin;
+  padding-bottom: 3vh;
+  margin-top: -1vh;
 }
 
 h2 {
@@ -177,8 +177,8 @@ footer {
 }
 
 .guess-display {
-	font-size: 5vmin;
-	min-height: 7vmin;
+	font-size: 5vh;
+	min-height: 7vh;
 }
 
 .guesses {
@@ -217,7 +217,7 @@ footer {
 .flip-container, .front, .back {
 	width: 320px;
 	min-height: 200px;
-	height: 20vmin;
+	height: 20vh;
 
 }
 
@@ -227,13 +227,13 @@ footer {
 	transform-style: preserve-3d;
 	transform-origin: right center;
 	position: relative;
-	font-size: 18vmin;
+	font-size: 18vh;
 	text-align: center;
 	color: #bdbdbd;
 	/*color: #424242;*/
 	font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
 	/*background: black;*/
-	max-height: 35vmin;
+	max-height: 35vh;
 	margin-bottom: 5px;
 }
 
@@ -273,7 +273,7 @@ footer {
 
 .demo {
 	text-align: center;
-	height: 12vmin;
+	height: 12vh;
 	padding-top: 5px;
 	margin-top: 5px;
 }
@@ -311,8 +311,9 @@ footer {
 	background: #eee;
 	border-radius: 5px;
 	padding: 5px;
-	width: 72%;
-	min-height: 7%;
+	width: 68vmin;
+  min-height: 60%;
+	min-width: 5%;
 	padding-bottom: 12px;
 	margin: 10px;
 }
@@ -338,7 +339,7 @@ footer {
 .keyboard__row {
     display: inline-block;
 		text-align: center;
-    height: 2em;
+    height: 3em;
     margin: 0.2em;
 }
 
@@ -351,7 +352,7 @@ footer {
     border-radius: 0.3em;
     margin: 0.2em;
     padding: 0.2em;
-    width: 3em;
+    width: 4em;
     height: 100%;
     box-sizing: border-box;
     cursor: pointer;
@@ -366,6 +367,6 @@ footer {
     background: #2a2a2a;
     color: #aaa;
     position: relative;
-    top: 0.2em;
+    /*top: 0.2em;*/
     box-shadow: 0 0 0 0.05em black;
 }
