--- a/application.css
+++ b/application.css
@@ -343,21 +343,23 @@ transform: rotateY(180deg);
   color: #333333;
   text-align: center;
   background: #eeeeee;
-  border-radius: 0.4em;
-  margin: 0.5vmax;
-  padding: 0.5vmax;
-  font-size: 1.75vmax;
-  width: 3.8vmax;
-  box-sizing: border-box;
+  border-radius: 0.3rem;
+  margin: 10px;
+  padding: 5px;
+  font-size: 1.5rem;
+  height: auto;
+  min-height: 2.5rem;
+  /*width: 3.8rem;*/
+  /*box-sizing: border-box;*/
   cursor: pointer;
   -webkit-user-select: none;
   border: 1px solid #444444;
-  box-shadow: 0 0.3vmax 0 0.05vmax #222222;
+  box-shadow: 0 0.3rem 0 0.05rem #222222;
   border-bottom-color: #555555;
   width: auto;
 }
 
 .score {
-  margin: 1vmin;
-  padding: 1vmin;
+  margin: 7px;
+  padding: 7px;
 }
