--- a/application.css
+++ b/application.css
@@ -190,7 +190,7 @@ footer {
   text-align: center;
   align-items: center;
   align-self: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
   flex-wrap: nowrap;
 }
@@ -259,7 +259,6 @@ footer {
   background: #2a2a2a;
   color: whitesmoke;
   box-shadow: 0 0 0 0.07vmax black;
-  position: relative;
 }
 
 .letters {
