--- a/application.css
+++ b/application.css
@@ -102,8 +102,8 @@ body {
 
 section {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
+  /*flex-wrap: nowrap;*/
+  /*flex-direction: row;*/
   justify-content: center;
   position: relative;
 }
