--- a/application.css
+++ b/application.css
@@ -234,7 +234,6 @@ footer {
   color: transparent;
 }
 
-
 /* .keyboard, .keyboard > *, and .key:active are derived from licensed content. The following license applies to this derivative work: */
 /*Copyright (c) 2017 by Gregory Schier (https://codepen.io/gschier/pen/VKgyaY)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
@@ -395,4 +394,14 @@ transform: rotateY(180deg);
   margin: 7px;
   padding: 7px;
   position: relative;
+}
+
+.clear:before,
+.clear:after {
+    content: " ";
+    display: table;
+}
+
+.clear:after {
+    clear: both;
 }
