--- a/application.css
+++ b/application.css
@@ -130,7 +130,8 @@ h1 {
   /* align-items: center; */
   display: flex;
   justify-content: center;
-  padding-bottom: 3vh;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
   /*margin-top: 1vh;*/
 }
 
