--- a/application.css
+++ b/application.css
@@ -95,7 +95,7 @@ input, select {
 body {
   /*background-image: linear-gradient(-90deg, #000000, #FFFFFF);*/
   /*background: linear-gradient(to right, rgba(255,0,0,0), rgba(255, 255, 255, 0.7));*/
-  font-family: "monospace", 'Montserrat', Arial, Helvetica, 'sans-serif';
+  font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
   background: #1c1c1c;
   color: white;
 }
@@ -299,10 +299,11 @@ transform: rotateY(180deg);
   transform-origin: right center;
   position: relative;
   font-size: 16vmin;
+  line-height: 16vmin;
   text-align: center;
   color: #bdbdbd;
   /*color: #424242;*/
-  font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';
+  /*font-family: 'Montserrat', Arial, Helvetica, 'sans-serif';*/
   /*background: black;*/
   max-height: 35vmin;
   margin-bottom: 5px;
